--- a/Mini Essay 2.qmd
+++ b/Mini Essay 2.qmd
@@ -5,3 +5,48 @@ author: "Maria Mangru"
 purpose: "code review"
 date: 14 January 2023
 ---
+
+```{r}
+### Work space Setup ###
+install.packages("opendatatoronto")
+install.packages("dplyr")
+library(opendatatoronto)
+library(dplyr)
+library(tidyverse)
+library(ggplot2)
+
+
+### Read in the data ###
+package <- show_package("2ab20f80-3599-486a-8f8a-9cb59117977c")
+package
+
+resources <- list_package_resources("2ab20f80-3599-486a-8f8a-9cb59117977c")
+	
+datastore_resources <- filter(resources, tolower(format) %in% c('csv', 'geojson'))
+
+data <- filter(datastore_resources, row_number()==1) %>% get_resource()
+data
+
+
+### Basic data cleaning ###
+# filtering out incomplete records, replacing NA values 
+cleaned_data <- data %>%
+  mutate(
+    unit = ifelse(is.na(unit), "No Unit", unit)  # Replace NA in 'unit' with "No Unit"
+  ) %>%
+  filter(!is.na(property_type) & !is.na(ward_name))  # Remove rows with missing 'property_type' or 'ward_name'
+
+### Data Visualization ###
+# Creating a bar graph for the count of property types
+plot <- ggplot(cleaned_data, aes(x = property_type)) +
+  geom_bar(fill = "steelblue") +
+  theme_minimal() +
+  labs(title = "Distribution of Property Types in Short-Term Rentals",
+       x = "Property Type",
+       y = "Count") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))  # Rotate X-axis labels for readability
+
+# saving bar graph as png
+output_dir <- "output"
+ggsave(file.path(output_dir, "property_type_distribution.png"), plot, width = 10, height = 6, dpi = 300)
+```
